# flex-testing-agent

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  alembic.ini  pyproject.toml
.cursor/rules/: flex-testing-agent.mdc  quality-gates.mdc  robot-safety.mdc
.cursor/skills/extend-flex-harness/: SKILL.md
.cursor/skills/operate-kansasflex/: SKILL.md
.github/workflows/: pages.yml
alembic/: env.py
alembic/versions/: 20260717_0001_initial_schema.py
docs/: architecture.md  development-plan.md  monorepo-releases.md  prior-art-review.md  robot-state-model.md  robot-versions.md  safety-model.md  source-research.md
docs/test-suggestions/: 9.1.2-96ch-row-centering.yaml  9.1.2-module-usb-reconnect.yaml  9.1.2-odd-loop-rtp-setup.yaml  README.md  SCHEMA.md
scenarios/: inspect-robot.yaml  lockdown-smoke.yaml
scripts/: publish_test_suggestions_pages.py
src/flex_testing_agent/: __init__.py  logging.py
src/flex_testing_agent/capabilities/: __init__.py  blocked.py  descriptor.py  inspect.py  install.py  module_reconnect.py  probe.py
src/flex_testing_agent/cli/: __init__.py  main.py
src/flex_testing_agent/clients/: __init__.py  auth_settings.py  camera.py  errors.py  health.py  modules.py  readonly.py  session.py  update.py  update_health.py
src/flex_testing_agent/config/: __init__.py  settings.py
src/flex_testing_agent/evidence/: __init__.py  redaction.py  store.py
src/flex_testing_agent/models/: __init__.py  access_control.py  build.py  health.py  risk.py  run.py  snapshot.py
src/flex_testing_agent/orchestration/: __init__.py  gates.py  lock.py  run_context.py
src/flex_testing_agent/persistence/: __init__.py  models.py  store.py
src/flex_testing_agent/releases/: __init__.py  catalog.py  client.py  resolve.py  urls.py  versions.py
src/flex_testing_agent/robots/: __init__.py  flex.py  protocol.py
src/flex_testing_agent/scenarios/: __init__.py  install_runner.py  loader.py  runner.py
src/flex_testing_agent/site/: __init__.py  models.py  (+1 more)
tests/: conftest.py
tests/contract/: test_health_contract.py
tests/integration/: test_inspect_scenario.py  test_requires_robot.py
tests/unit/: test_clients.py  test_evidence.py  test_gates.py  test_install_gate.py  test_models.py  test_modules_client.py  test_persistence.py  test_readonly_camera.py  test_redaction.py  test_releases.py  test_scenario_loader.py  test_settings.py  test_site_publish.py
